--- a/Project 3 Hotels.ipynb
+++ b/Project 3 Hotels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "id": "5df4140b",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -50,6 +50,8 @@
     "# Загружаем специальный удобный инструмент для разделения датасета:\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "from geopy.distance import great_circle  # Расчёт расстояний на основе координат\n",
+    "\n",
     "# Input data files are available in the read-only \"../input/\" directory\n",
     "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
     "\n",
@@ -65,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "b8575e58",
    "metadata": {
     "execution": {
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "id": "3fc4b02c",
    "metadata": {
     "execution": {
@@ -119,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "id": "3f49903e",
    "metadata": {
     "execution": {
@@ -151,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "id": "e437394e",
    "metadata": {
     "execution": {
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "id": "f35eb886",
    "metadata": {
     "execution": {
@@ -347,7 +349,7 @@
        "1  51.521009 -0.123097  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "id": "cb2aa9de",
    "metadata": {
     "execution": {
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "id": "51ca8dab",
    "metadata": {
     "execution": {
@@ -471,6 +473,8 @@
        "      <th>days_since_review</th>\n",
        "      <th>lat</th>\n",
        "      <th>lng</th>\n",
+       "      <th>sample</th>\n",
+       "      <th>reviewer_score</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -492,6 +496,8 @@
        "      <td>13 days</td>\n",
        "      <td>45.533137</td>\n",
        "      <td>9.171102</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -511,6 +517,50 @@
        "      <td>234 day</td>\n",
        "      <td>52.385649</td>\n",
        "      <td>4.834443</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Mallorca 251 Eixample 08008 Barcelona Spain</td>\n",
+       "      <td>46</td>\n",
+       "      <td>11/26/2015</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>Alexandra Barcelona A DoubleTree by Hilton</td>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Pillows</td>\n",
+       "      <td>3</td>\n",
+       "      <td>351</td>\n",
+       "      <td>Nice welcoming and service</td>\n",
+       "      <td>5</td>\n",
+       "      <td>15</td>\n",
+       "      <td>[' Business trip ', ' Solo traveler ', ' Twin ...</td>\n",
+       "      <td>616 day</td>\n",
+       "      <td>41.393192</td>\n",
+       "      <td>2.161520</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Piazza Della Repubblica 17 Central Station 201...</td>\n",
+       "      <td>241</td>\n",
+       "      <td>10/17/2015</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>Hotel Principe Di Savoia</td>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>No Negative</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1543</td>\n",
+       "      <td>Everything including the nice upgrade The Hot...</td>\n",
+       "      <td>27</td>\n",
+       "      <td>9</td>\n",
+       "      <td>[' Leisure trip ', ' Couple ', ' Ambassador Ju...</td>\n",
+       "      <td>656 day</td>\n",
+       "      <td>45.479888</td>\n",
+       "      <td>9.196298</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -520,52 +570,76 @@
        "                                       hotel_address  \\\n",
        "0                 Via Senigallia 6 20161 Milan Italy   \n",
        "1  Arlandaweg 10 Westpoort 1043 EW Amsterdam Neth...   \n",
+       "2        Mallorca 251 Eixample 08008 Barcelona Spain   \n",
+       "3  Piazza Della Repubblica 17 Central Station 201...   \n",
        "\n",
-       "   additional_number_of_scoring review_date  average_score         hotel_name  \\\n",
-       "0                           904   7/21/2017            8.1     Hotel Da Vinci   \n",
-       "1                           612  12/12/2016            8.6  Urban Lodge Hotel   \n",
+       "   additional_number_of_scoring review_date  average_score  \\\n",
+       "0                           904   7/21/2017            8.1   \n",
+       "1                           612  12/12/2016            8.6   \n",
+       "2                            46  11/26/2015            8.3   \n",
+       "3                           241  10/17/2015            9.1   \n",
        "\n",
-       "  reviewer_nationality                                    negative_review  \\\n",
-       "0      United Kingdom    Would have appreciated a shop in the hotel th...   \n",
-       "1             Belgium         No tissue paper box was present at the room   \n",
+       "                                   hotel_name        reviewer_nationality  \\\n",
+       "0                              Hotel Da Vinci             United Kingdom    \n",
+       "1                           Urban Lodge Hotel                    Belgium    \n",
+       "2  Alexandra Barcelona A DoubleTree by Hilton                     Sweden    \n",
+       "3                    Hotel Principe Di Savoia   United States of America    \n",
+       "\n",
+       "                                     negative_review  \\\n",
+       "0   Would have appreciated a shop in the hotel th...   \n",
+       "1        No tissue paper box was present at the room   \n",
+       "2                                           Pillows    \n",
+       "3                                        No Negative   \n",
        "\n",
        "   review_total_negative_word_counts  total_number_of_reviews  \\\n",
        "0                                 52                    16670   \n",
        "1                                 10                     5018   \n",
+       "2                                  3                      351   \n",
+       "3                                  0                     1543   \n",
        "\n",
        "                                     positive_review  \\\n",
        "0   Hotel was great clean friendly staff free bre...   \n",
        "1                                        No Positive   \n",
+       "2                         Nice welcoming and service   \n",
+       "3   Everything including the nice upgrade The Hot...   \n",
        "\n",
        "   review_total_positive_word_counts  \\\n",
        "0                                 62   \n",
        "1                                  0   \n",
+       "2                                  5   \n",
+       "3                                 27   \n",
        "\n",
        "   total_number_of_reviews_reviewer_has_given  \\\n",
        "0                                           1   \n",
        "1                                           7   \n",
+       "2                                          15   \n",
+       "3                                           9   \n",
        "\n",
        "                                                tags days_since_review  \\\n",
        "0  [' Leisure trip ', ' Couple ', ' Double Room '...           13 days   \n",
        "1  [' Leisure trip ', ' Group ', ' Triple Room ',...           234 day   \n",
+       "2  [' Business trip ', ' Solo traveler ', ' Twin ...           616 day   \n",
+       "3  [' Leisure trip ', ' Couple ', ' Ambassador Ju...           656 day   \n",
        "\n",
-       "         lat       lng  \n",
-       "0  45.533137  9.171102  \n",
-       "1  52.385649  4.834443  "
+       "         lat       lng  sample  reviewer_score  \n",
+       "0  45.533137  9.171102       0               0  \n",
+       "1  52.385649  4.834443       0               0  \n",
+       "2  41.393192  2.161520       0               0  \n",
+       "3  45.479888  9.196298       0               0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_test.head(2)"
+    "df_test.head(4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "9d665214",
    "metadata": {
     "execution": {
@@ -613,12 +687,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
+       "      <td>8.510</td>\n",
        "      <td>488440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10</td>\n",
+       "      <td>8.084</td>\n",
        "      <td>274649</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -627,11 +701,11 @@
       ],
       "text/plain": [
        "   reviewer_score      id\n",
-       "0               1  488440\n",
-       "1              10  274649"
+       "0           8.510  488440\n",
+       "1           8.084  274649"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "556fc14c",
    "metadata": {
     "execution": {
@@ -669,11 +743,11 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 128935 entries, 0 to 128934\n",
       "Data columns (total 2 columns):\n",
-      " #   Column          Non-Null Count   Dtype\n",
-      "---  ------          --------------   -----\n",
-      " 0   reviewer_score  128935 non-null  int64\n",
-      " 1   id              128935 non-null  int64\n",
-      "dtypes: int64(2)\n",
+      " #   Column          Non-Null Count   Dtype  \n",
+      "---  ------          --------------   -----  \n",
+      " 0   reviewer_score  128935 non-null  float64\n",
+      " 1   id              128935 non-null  int64  \n",
+      "dtypes: float64(1), int64(1)\n",
       "memory usage: 2.0 MB\n"
      ]
     }
@@ -684,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "a3b079a7",
    "metadata": {
     "execution": {
@@ -715,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "id": "9d12d59d",
    "metadata": {
     "execution": {
@@ -764,6 +838,98 @@
       " 17  reviewer_score                              515738 non-null  float64\n",
       "dtypes: float64(4), int64(6), object(8)\n",
       "memory usage: 70.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbd07ef6",
+   "metadata": {},
+   "source": [
+    "#### Проверим наличие дубликатов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6793948e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Число найденных дубликатов: 336'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dupl_columns = list(data.columns)\n",
+    "\n",
+    "mask = data.duplicated(subset=dupl_columns)\n",
+    "h_duplicates = data[mask]\n",
+    "display(f'Число найденных дубликатов: {h_duplicates.shape[0]}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "202dfa66",
+   "metadata": {},
+   "source": [
+    "#### Удалим дубликаты"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "8395ee62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.drop_duplicates(subset=dupl_columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "d104d938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 515402 entries, 0 to 515737\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                                      Non-Null Count   Dtype  \n",
+      "---  ------                                      --------------   -----  \n",
+      " 0   hotel_address                               515402 non-null  object \n",
+      " 1   additional_number_of_scoring                515402 non-null  int64  \n",
+      " 2   review_date                                 515402 non-null  object \n",
+      " 3   average_score                               515402 non-null  float64\n",
+      " 4   hotel_name                                  515402 non-null  object \n",
+      " 5   reviewer_nationality                        515402 non-null  object \n",
+      " 6   negative_review                             515402 non-null  object \n",
+      " 7   review_total_negative_word_counts           515402 non-null  int64  \n",
+      " 8   total_number_of_reviews                     515402 non-null  int64  \n",
+      " 9   positive_review                             515402 non-null  object \n",
+      " 10  review_total_positive_word_counts           515402 non-null  int64  \n",
+      " 11  total_number_of_reviews_reviewer_has_given  515402 non-null  int64  \n",
+      " 12  tags                                        515402 non-null  object \n",
+      " 13  days_since_review                           515402 non-null  object \n",
+      " 14  lat                                         512134 non-null  float64\n",
+      " 15  lng                                         512134 non-null  float64\n",
+      " 16  sample                                      515402 non-null  int64  \n",
+      " 17  reviewer_score                              515402 non-null  float64\n",
+      "dtypes: float64(4), int64(6), object(8)\n",
+      "memory usage: 74.7+ MB\n"
      ]
     }
    ],
@@ -1770,7 +1936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "b99715e0",
    "metadata": {
     "execution": {
@@ -1884,14 +2050,14 @@
        "9        8.095000  195089"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sample_submission['reviewer_score'] = predict_submission\n",
-    "sample_submission.to_csv('submission.csv', index=False)\n",
+    "sample_submission.to_csv('data/submission.csv', index=False)\n",
     "sample_submission.head(10)"
    ]
   },
