--- a/Project 3 Hotels.ipynb
+++ b/Project 3 Hotels.ipynb
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": null,
    "id": "b60603f2",
    "metadata": {
     "execution": {
@@ -1399,7 +1399,9 @@
    ],
    "source": [
     "plt.rcParams['figure.figsize'] = (15,10)\n",
-    "sns.heatmap(data.drop(['sample'], axis=1).corr(numeric_only=True), annot=True)"
+    "sns.heatmap(data.drop(['sample'], axis=1).corr(numeric_only=True), annot=True)\n",
+    "# for Kaggle\n",
+    "#sns.heatmap(data.drop(['sample'], axis=1).corr(), annot=True)"
    ]
   },
   {
