--- a/Project 3 Hotels.ipynb
+++ b/Project 3 Hotels.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": null,
    "id": "5df4140b",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -56,6 +56,7 @@
     "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
     "\n",
     "import os\n",
+    "# for Kaggle\n",
     "#for dirname, _, filenames in os.walk('/kaggle/input'):\n",
     "for dirname, _, filenames in os.walk('data/'):\n",
     "    for filename in filenames:\n",
@@ -2323,7 +2324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": null,
    "id": "b99715e0",
    "metadata": {
     "execution": {
@@ -2445,6 +2446,8 @@
    "source": [
     "sample_submission['reviewer_score'] = predict_submission\n",
     "sample_submission.to_csv('data/submission.csv', index=False)\n",
+    "# for Kaggle\n",
+    "#sample_submission.to_csv('submission.csv', index=False)\n",
     "sample_submission.head(10)"
    ]
   },
